# Source-Code-Security-Scanner_v2

./: .env.example  .gitignore  README.md  action.yml  pyproject.toml  radar.config.yml
.github/workflows/: security-scan.yml
analysis_results/: fastapi_impact_graph.html  fastapi_semgrep_results.json  fastapi_unified_dashboard.html  uptime-kuma_unified_dashboard.html
demo/: run-demo.md  run-github-demo.md
demo/app/: server.js
docs/: bao-cao-leader-tools-moi.md  development-roadmap.md  handover-tools-ben-canh-semgrep.md  project-changelog.md  report-nguyen-duc-hai.md  report-tools-moi-them.md  security-radar-prd.md  system-architecture.md  test-ci-on-forked-repo.md  tong-hop-du-an.md
docs/journals/: 260606-security-radar-initial-implementation-6-phases.md  260623-radar-serve-live-dashboard.md
examples/: security.yml
plans/20260605-1835-security-radar-semgrep-impact-graph/: phase-01-scaffold-and-semgrep-workflow.md  phase-02-pr-comment-and-custom-rules.md  phase-03-graph-core-and-js-extractor.md  phase-04-impact-cli.md  phase-05-python-plugin-and-feature-map.md  plan.md  (+1 more)
rules/: js-hardcoded-jwt-secret.js  js-sql-string-concat.js  js-sql-string-concat.yaml  py-subprocess-shell-true.py
scripts/: analyze-github.py  render-pr-comment.py
src/radar/: cache.py  (+3 more)
tests/: test_builder.py  test_cache.py  test_config.py  test_diff_mapper.py  test_exporters.py  test_graph_go.py  test_graph_java.py  test_graph_php.py  test_graph_transform.py  test_graph_viz.py  test_handler_object_resolution.py  test_impact_findings.py  test_js_extractor.py  test_python_extractor.py  test_render_pr_comment.py  test_report_dashboard.py  test_risk.py  test_scan_cli.py  test_scan_engines.py  test_scan_findings.py  test_scan_runner.py  test_serve_broadcaster.py  test_serve_endpoints.py  test_serve_fragments.py  test_serve_impact.py  test_serve_orchestrator.py  test_suppress.py  test_tracer.py  test_triage_cache.py  test_triage_engine.py  test_triage_prompt.py  test_triage_ranking.py  test_triage_reachability.py  test_triage_render.py  test_watch_loop.py  test_watcher.py
(+176 files in other folders)
