[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "security-radar"
version = "0.1.0"
description = "Semgrep CI security scan + function-level impact graph (blast radius tracing)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "networkx>=3.0",
    "tree-sitter>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-python>=0.23",
    "PyYAML>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
radar = "radar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
radar = ["report/templates/*.j2", "rules/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
