[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "security-radar"
version = "0.2.2"
description = "Semgrep CI security scan + function-level impact graph (blast radius tracing)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "networkx>=3.0",
    "tree-sitter>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-go>=0.23; python_version>='3.11'",
    "tree-sitter-java>=0.23; python_version>='3.11'",
    "tree-sitter-php>=0.23; python_version>='3.11'",
    "PyYAML>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
go = ["tree-sitter-go>=0.23"]
java = ["tree-sitter-java>=0.23"]
php = ["tree-sitter-php>=0.23"]
watch = ["watchdog>=3.0"]

[project.scripts]
radar = "radar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
radar = ["report/templates/*.j2", "rules/*", "graph/vendor/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
